<resources>
    <string name="app_name">DonationBox</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="banner_id">ca-app-pub-9542285454381078/2094362830</string>
    <string name="banner_test_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_user_product">My Product</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="phone_number">Phone Number</string>
    <string name="login">Login</string>
    <string name="ngo_sign_in">Sign in as a NGO?</string>
    <string name="donor_sign_in">Sign in as a donor?</string>
    <string name="ngo_id"> ID</string>
    <string name="ngo_paswword"> Password</string>
    <string name="submit">Submit</string>
    <string name="verification_code">Enter verification code</string>
    <string name="mark_it_claimed">MARK IT CLAIMED</string>
    <string name="undo_claim">UNDO CLAIM</string>
    <string name="donor_name">Name</string>
    <string name="donor_product_details">Product Details</string>
    <string name="donor_address">Address</string>
    <string name="donor_pincode">Pincode</string>
    <string name="donor_product_quality">Product Quality</string>
    <string name="donor_product_category">Product Category</string>
    <string name="donate">DONATE</string>
    <string name="menu_donate">Donate</string>
    <string name="donor_note">We hope you understand that your address and mobile number will be displayed to NGOs and they may contact you for the product.</string>
    <string name="delete">Delete this product</string>
    <string name="my_claimed_product">My Claimed Product</string>
    <string name="resend">Resend verification code</string>
    <string name="offline_message">You are offline, check your internet!!</string>
    <string name="menu_contact">Contact Us</string>
    <string name="empty_donation_message">It seems no product have been donated yet!!</string>
</resources>
