<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_donate"
            android:icon="@drawable/donation"
            android:title="@string/menu_donate" />
        <item
            android:id="@+id/nav_user_product"
            android:icon="@drawable/product"
            android:title="@string/menu_user_product" />

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/email"
            android:title="@string/menu_contact" />
        <!--<item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_send" />-->
    </group>


</menu>
