<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.auth.PhoneAuthActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        app:srcCompat="@drawable/donation_box_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="34sp"
        android:fontFamily="@font/avenir"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"/>

    <LinearLayout
        android:id="@+id/normal_login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                app:srcCompat="@drawable/ic_local_phone_orange_24dp" />

            <EditText
                android:id="@+id/phone_number_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1" />

        </LinearLayout>

        <TextView
            android:id="@+id/ngo_login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ngo_sign_in"
            android:layout_gravity="end"
            android:layout_marginEnd="24dp"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/login"
            android:textSize="18sp"
            android:backgroundTint="@color/colorPrimaryDark"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ngo_login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <EditText
            android:id="@+id/ngo_id_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/ngo_id"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"/>
        <EditText
            android:id="@+id/ngo_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ngo_paswword"
            android:inputType="textPassword"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"/>
        <TextView
            android:id="@+id/donor_login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donor_sign_in"
            android:layout_marginEnd="24dp"
            android:layout_gravity="end"/>
        <Button
            android:id="@+id/ngo_login_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/submit"
            android:background="@drawable/shape"
            android:backgroundTint="@color/colorPrimaryDark"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/verification_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/verification_code_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/verification_code"
            android:layout_margin="24dp"/>

        <Button
            android:id="@+id/verification_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/submit"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"/>
    </LinearLayout>

</LinearLayout>