<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.donationbox.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_donate"
        android:name="com.example.donationbox.ui.donate.DonateFragment"
        android:label="@string/menu_donate"
        tools:layout="@layout/fragment_donor" />

    <fragment
        android:id="@+id/nav_user_product"
        android:name="com.example.donationbox.ui.user_product.UserProductFragment"
        android:label="@string/menu_user_product"
        tools:layout="@layout/fragment_user_product" />

    <!--<fragment
        android:id="@+id/nav_contact"
        android:name="com.example.donationbox.ui.share.ShareFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_share" />-->

    <!--<fragment
        android:id="@+id/nav_send"
        android:name="com.example.donationbox.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />-->
</navigation>