<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary2">

        <ImageView
            android:id="@+id/donor_product_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:src="@drawable/ic_baseline_add_photo_alternate_24"/>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:visibility="invisible"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/donor_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_below="@id/donor_product_image"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/donor_name"
            android:textColorHint="@android:color/white"
            app:hintTextColor="@android:color/white"
            app:boxStrokeColor="@android:color/white">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/donor_name_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@android:color/white"
                tools:text="Alok Bharti"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/donor_product_quality_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_below="@id/donor_product_details_layout"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:hint="@string/donor_product_quality"
            android:textColorHint="@android:color/white"
            app:hintTextColor="@android:color/white"
            app:boxStrokeColor="@android:color/white">
            <AutoCompleteTextView
                android:id="@+id/donor_product_quality"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:text="Very Good"
                android:textColor="@android:color/white"
                android:editable="false"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/donor_product_category_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_below="@id/donor_product_quality_layout"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:hint="@string/donor_product_category"
            android:textColorHint="@android:color/white"
            app:hintTextColor="@android:color/white"
            app:boxStrokeColor="@android:color/white">
            <AutoCompleteTextView
                android:id="@+id/donor_product_category"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:editable="false"
                android:inputType="none"
                android:textColor="@android:color/white"
                tools:text="Book"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/donor_product_details_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_below="@id/donor_name_layout"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:hint="@string/donor_product_details"
            android:textColorHint="@android:color/white"
            app:hintTextColor="@android:color/white"
            app:boxStrokeColor="@android:color/white">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/donor_product_details_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@android:color/white"
                tools:text="1 pair of shirts of size L"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/donor_address_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_below="@id/donor_product_category_layout"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:hint="@string/donor_address"
            android:textColorHint="@android:color/white"
            app:hintTextColor="@android:color/white"
            app:boxStrokeColor="@android:color/white">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/donor_address_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@android:color/white"
                tools:text="Hall-3, IIIT Jabalpur, M.P."/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/donor_pincode_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_below="@id/donor_address_layout"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:hint="@string/donor_pincode"
            android:textColorHint="@android:color/white"
            app:hintTextColor="@android:color/white"
            app:boxStrokeColor="@android:color/white">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/donor_pincode_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:maxLength="6"
                android:textColor="@android:color/white"
                tools:text="482005"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/donor_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@id/donor_pincode_layout"
            android:backgroundTint="@color/colorPrimary2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@id/donor_product_image"
                android:textColor="@android:color/white"
                android:text="@string/donor_note" />

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/donate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:layout_below="@id/donor_note"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/donate"/>

    </RelativeLayout>
</ScrollView>