<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/t_shirt"
            android:layout_margin="20dp"/>

        <TextView
            android:id="@+id/product_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_image"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:fontFamily="@font/avenir"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/product_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_image"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            tools:text="clothes"/>

        <TextView
            android:id="@+id/product_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_details"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            tools:text="Product Quality: Very Good"/>

        <TextView
            android:id="@+id/product_donor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_condition"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            tools:text="Alok Bharti"/>

        <TextView
            android:id="@+id/product_donor_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_donor_name"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            tools:text="Hall-3, PDPM IIITDM Jabalpur, M.P."/>

        <TextView
            android:id="@+id/product_donor_pincode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_donor_address"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            tools:text="482005"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/mark_claim_undo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_donor_pincode"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape"
            android:text="@string/undo_claim" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/mark_claim_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_donor_pincode"
            android:layout_toEndOf="@id/mark_claim_undo_button"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape"
            android:text="@string/mark_it_claimed"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>